Update SPA to 2.8.9

--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x040A
 Name=Spanish (Español)
-Version=2.8.6
+Version=2.8.9
 Author=Steven Rogers, Leandro Botella Penalva
 1=Aceptar
 2=Cancelar
@@ -84,7 +84,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 0=KeyDB
 3=Xreveal no contiene ninguna clave de descifrado, necesitarás una <a>base de datos de claves</a> para hacerlo funcionar.
 4=Ubicación de keydb.cfg
-6=&Buscar claves en línea si no se encuentran localmente
+6=&Habilitar acceso a internet
 
 [DIALOG_13]
 0=Mis Unidades
@@ -127,7 +127,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 [DIALOG_17]
 0=Copiador
 3=Número de reintentos de lectura:
-4=Abortar cuando los errores ignorados excedan :
+4=Abortar cuando los errores ignorados excedan:
 5=Copiar carpeta SSIF al copiar Blu-ray 3D a carpeta
 6=Agregar el registro del estado de la unidad al registro de copiado
 7=Mostrar advertencia al crear una imagen protegida
@@ -221,24 +221,24 @@ Author=Steven Rogers, Leandro Botella Penalva
 8=Clave pública:
 9=Firma:
 10=Número del dispositivo:
-11=Private key:
-12=Paste the private key to verify it
+11=Clave privada:
+12=Pega la clave privada para verificarla
 
 [DIALOG_33]
-0=Change ISO Label
-1=&Change
-3=&ISO file:
-4=&Label:
+0=Cambiar Etiqueta ISO
+1=&Cambiar
+3=&Archivo ISO:
+4=&Etiqueta:
 6=...
 7=di:name
 
 [DIALOG_34]
-0=Folder to ISO
-3=&Folder:
-4=&ISO file:
-5=&Label:
-6=Format:
-7=Start
+0=Carpeta a ISO
+3=&Carpeta:
+4=&Archivo ISO:
+5=&Etiqueta:
+6=Formato:
+7=Iniciar
 
 [DIALOG_A]
 0=Actualización de Software
@@ -308,7 +308,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 40=&Estado
 41=&Abrir en el Explorador
 42=&Envio de metafile
-43=Verificador de Hash del Contenido...
+43=Verificador de Hash del Contenido
 44=Copiar a &Carpeta...
 45=Copiar a Archivo &ISO...
 46=&Habilitar Xreveal
@@ -331,7 +331,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 63=Cambios restantes
 64=Región %C
 65=&Siempre visible
-66=&Comprar
+66=&Comprar Ahora
 67=Licenciado a %s\r\nUsuarios máximos: %d\r\nLicenciado hasta: %s
 68=Para siempre
 69=&Registrar...
@@ -430,8 +430,8 @@ Author=Steven Rogers, Leandro Botella Penalva
 162=Opcional
 163=Archivo enviado correctamente, ¡gracias!
 164=Cerrar esta ventana
-165=Change ISO &Label...
-166=Folder to &ISO...
-167=Please select or drag a ISO file here
-168=Please select or drag a folder here
+165=Cambiar &Etiqueta ISO...
+166=Carpeta a &ISO...
+167=Por favor, selecciona o arrastra un archivo ISO aquí
+168=Por favor, selecciona o arrastra una carpeta aquí
 169=Ayuda
