--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -1,8 +1,8 @@
 ﻿[INFO]
 ID=0x0415
 Name=Polish (Polski)
-Version=2.8.6
-Author=Fresta, updated to 2.8.6 by adijos
+Version=2.8.9
+Author=Fresta, updated to 2.8.9 by adijos
 1=OK
 2=&Anuluj
 
@@ -84,7 +84,7 @@ Author=Fresta, updated to 2.8.6 by adijos
 0=KeyDB
 3=Xreveal nie zawiera żadnego klucza deszyfrującego, do jego działania potrzebna jest baza danych kluczy. <a>Czytaj więcej</a>.
 4=Lokalizacja keydb.cfg:
-6=&Znajdź klucz online, jeśli nie jest dostępny lokalnie
+6=&Włącz dostęp do sieci internet
 
 [DIALOG_13]
 0=Moje Napędy
@@ -104,7 +104,7 @@ Author=Fresta, updated to 2.8.6 by adijos
 10=Wolne miejsce:
 11=Pojemność:
 12=&Zachowaj zabezpieczenie
-13=Sprawdz &hash zawartości
+13=Sprawdz &sumę kontrolną zawartości
 14=Stwórz sumę kontrolną &MD5 
 15=Stwórz &dvdid.xml
 16=Stwórz plik logów
@@ -138,8 +138,8 @@ Author=Fresta, updated to 2.8.6 by adijos
 
 [DIALOG_19]
 0=Skróty klawiszowe
-3=Utwórz skr. klaw. dla całego systemu, by uruchamiać określone działania, kiedy Xreveal działa.
-4=Pokaż menu paska systemowego Xreveal
+3=Utwórz skr. klaw. dla całego systemu, by uruchamiać określone polecenia, kiedy Xreveal działa.
+4=Pokaż menu Xreveal
 
 [DIALOG_20]
 0=HD DVD
@@ -221,22 +221,22 @@ Author=Fresta, updated to 2.8.6 by adijos
 8=Klucz publiczny:
 9=Sygnatura:
 10=Numer urządzenia:
-11=Private key:
-12=Paste the private key to verify it
+11=Klucz prywatny:
+12=Wklej prywatny klucz, aby go zweryfikować
 
 [DIALOG_33]
-0=Change ISO Label
-1=&Change
-3=&ISO file:
-4=&Label:
+0=Zmień etykietę obrazu ISO
+1=&Zmień
+3=&Plik ISO:
+4=&Nazwa:
 6=...
 7=di:name
 
 [DIALOG_34]
-0=Folder to ISO
+0=Obraz ISO z folderu
 3=&Folder:
-4=&ISO file:
-5=&Label:
+4=&Plik ISO:
+5=&Etykieta:
 6=Format:
 7=Start
 
@@ -308,7 +308,7 @@ Author=Fresta, updated to 2.8.6 by adijos
 40=&Status
 41=&Otwórz w Eksploratorze
 42=&Zgłoszenie pliku meta
-43=&Weryfikacja Hash Zawartości...
+43=&Weryfikacja sumy kontrolnej zawartości...
 44=Zgraj na &Dysk Twardy...
 45=Zgraj do &Obrazu ISO...
 46=&Włącz Xreveal
@@ -413,7 +413,7 @@ Author=Fresta, updated to 2.8.6 by adijos
 145=Wstrzymaj operację
 146=Wznów operację
 147=Programy
-148=Busy
+148=Zajęty
 149=&Sprawdź aktualizacje
 150=&Zapisz...
 151=Włącz LibreDrive
@@ -430,8 +430,9 @@ Author=Fresta, updated to 2.8.6 by adijos
 162=Opcjonalne
 163=Plik przesłany pomyślnie, dziękujemy!
 164=Zamknij to okno
-165=Change ISO &Label...
-166=Folder to &ISO...
-167=Please select or drag a ISO file here
-168=Please select or drag a folder here
+165=Zmień &Etykietę ISO...
+166=Folder do obrazu &ISO...
+167=Proszę wybrać lub przeciągnąć tutaj plik ISO
+168=Proszę wybrać lub przeciągnąć tutaj folder
 169=Pomoc
+
