Update Italian language

--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -19,12 +19,12 @@ Author=bovirus (bovirus@gmail.com)
 
 [DIALOG_4]
 0=Specifica codice regionale Blu-ray
-4=La finestra si chiuderà automaticamente dopo %d secondi.
+4=La finestra si chiuderà automaticamente tra %d secondi.
 5=Non chiederlo più
 
 [DIALOG_5]
-0=Specifica regione DVD
-4=La finestra si chiuderà automaticamente dopo %d secondi.
+0=Specifica regionale DVD
+4=La finestra si chiuderà automaticamente tra %d secondi.
 5=Non chiederlo più
 
 [DIALOG_6]
@@ -37,58 +37,58 @@ Author=bovirus (bovirus@gmail.com)
 [DIALOG_8]
 0=Generale
 3=Lingua:
-4=&Avvia Xreveal con Windows
+4=&Esegui Xreveal all'avvio di Windows
 5=Mantieni ques&ta finestra sempre in primo piano
-6=&Elenca unità nel menu barra di sistema
+6=&Elenca unità nel menu barra sistema
 7=&Controlla automaticamente aggiornamenti
 8=<a>Controlla ora</a>
 9=Tema:
 10=Usa accelerazione hardware &AES
 11=<a>Prestazioni</a>
-12=Mostra finestra informativa per nuovi media
+12=Visualizza finestra info nuovi media
 
 [DIALOG_9]
 0=CD
-3=Rimuovi protezione audio digitale del CD
+3=Rimuovi protezione audio digitale CD
 
 [DIALOG_10]
 0=DVD
 3=&Abilita supporto DVD
 4=Rimuovi &RC (codice regionale)
 5=Rimuovi RC&E (miglioramento codice regionale)
-6=Codice regione &disco:
+6=Codice regionale &disco:
 7=Rimuovi &APS (sistema protezione analogico)
 8=Rimuovi &UOP (proibizioni operazioni utente)
 9=Rimuovi &ARccOS
 10=Sottotitoli trasparenti
-11=Xreveal necessita di <a>libdvdcss-2.dll</a> per aprire dischi DVD.
-12=Disabilita Avvio automatico
+11=Per aprire dischi DVDXreveal necessita di <a>libdvdcss-2.dll</a>.
+12=Disabilita avvio automatico
 
 [DIALOG_11]
-0=Blu-ray
+0=Blu-ray/UHD
 3=&Abilita supporto Blu-ray
 4=Rimuovi &BD+
 5=Rimuovi &RC (codice regionale)
 6=Codice regionale &disco:
 7=Rimuovi codice regionale
-8=Rimuovi &UOP (User Operation Prohibitions)
-9=Rimuo&vi CCI (Copy Control Information)
+8=Rimuovi &UOP (proibizioni operazioni utente)
+9=Rimuo&vi CCI (info controllo copia)
 10=Disabilita BD &Live
 11=&Simula display 3D connesso
 12=Rinomina cartella AACS in
-15=Rimuovi pubblicità e trailers
-16=Rimuovi sequenze video più corte di %s minuti
-17=Sottotitoli trasparenti
+15=Rimuovi pubblicità e trailer
+16=Rimuovi sequen&ze video più corte di %s minuti
+17=&Sottotitoli trasparenti
 
 [DIALOG_12]
 0=KeyDB
-3=Xreveal non contiene alcuna chiave di decrittazione.\nPer farlo funzionare è necessario un database di chiavi. <a>Maggiori info</a>.
+3=Xreveal non contiene alcuna chiave di decrittazione.\nPer farlo funzionare è necessario un <a>database di chiavi</a>.
 4=Percorso file keydb.cfg
-6=&Ricerca online
+6=Abilita acc&esso internet
 
 [DIALOG_13]
 0=Mie unità
-3=&Seleziona le unità che vuoi scansionare con Xreveal.
+3=&Seleziona le unità da scansionare con Xreveal.
 5=&Disabilita esecuzione/riproduzione automatica
 8=Abilita &LibreDrive per UHD
 
@@ -104,13 +104,13 @@ Author=bovirus (bovirus@gmail.com)
 10=Spazio libero:
 11=Capacità:
 12=&Mantieni protezione
-13=Verica &Hash contenuto
-14=Crea file di checksum &MD5
+13=Verifica &hash contenuto
+14=Crea file checksum &MD5
 15=Crea &dvdid.xml
-16=Crea file di log
+16=Crea file registro eventi
 17=Crea disc.&metaiso
 18=Copia solo cartella &VIDEO_TS
-19=Verifica files &M2TS
+19=Verifica byte sincronizzazione &M2TS
 
 [DIALOG_15]
 0=Xreveal
@@ -118,19 +118,19 @@ Author=bovirus (bovirus@gmail.com)
 4=Destinazione:
 6=Tempo trascorso:
 7=Tempo rimanente:
-8=Errori di lettura:
-9=Velocità di lettura:
+8=Errori lettura:
+9=Velocità lettura:
 
 [DIALOG_16]
 0=Regione riproduttore
 
 [DIALOG_17]
 0=Ripper
-3=Numero tentativi di lettura:
-4=Abbandona quando gli errori ignorati sono superiori a :
-5=Copia cartella SSIF durante il rip del Blu-ray 3D nella cartella
-6=Aggiungi il contenuto dello stato dell'unità al log del rip
-7=Mostra avviso alla creazione di un'immagine protetta
+3=Numero tentativi lettura:
+4=Interrompi con errori ignorati superiori a :
+5=Durante il rip del Blu-ray 3D nella cartella copia cartella SSIF
+6=Aggiungi contenuto registro stato unità al registro rip
+7=Visualizza avviso creazione immagine protetta
 
 [DIALOG_18]
 0=Registra Xreveal
@@ -138,14 +138,14 @@ Author=bovirus (bovirus@gmail.com)
 
 [DIALOG_19]
 0=Tasti scelta rapida
-3=Crea hotkeys globali per richiamare specifiche azioni mentre Xreveal è in uso.
-4=Mostra il menu di Xreveal
+3=Crea tasti scelta rapida globali per specifiche azioni mentre Xreveal è in uso.
+4=Visualizza menu Xreveal
 
 [DIALOG_20]
 0=HD DVD
 3=&Abilita supporto HD DVD
 4=Rimuovi &primo titolo riprodotto
-5=Rimuovi &UOPs (User Operation Prohibitions)
+5=Rimuovi proibizioni azioni utente
 6=Rimuovi restrizioni &genitori
 
 [DIALOG_21]
@@ -155,7 +155,7 @@ Author=bovirus (bovirus@gmail.com)
 1=Sì
 2=No
 3=Passa a Pro
-4=La chiave del disco non è stata trovata in keydb.cfg.\nVuoi provare la funzione Pro "Trova chiave online"?
+4=Nel file keydb.cfg non è stata trovata la chiave del disco.\nVuoi provare la funzione Pro "Trova chiave online"?
 
 [DIALOG_23]
 0=Informazioni disco
@@ -174,37 +174,37 @@ Author=bovirus (bovirus@gmail.com)
 3=Specifica o trascina la sorgente keydb.db da importare in <a>%s</a>.
 
 [DIALOG_26]
-0=Verificatore hash contenuto
+0=Verifica hash contenuto
 
 [DIALOG_27]
 0=Suoni
 3=Riproduci suono dopo l'apertura del disco
 4=Riproduci suono dopo il ripping del disco
-5=Suono ripping avvenuto con successo:
-6=Suono errore durante il ripping:
+5=Suono per ripping completato:
+6=Suono per errore durante ripping:
 
 [DIALOG_28]
-0=Inoltro Metafile
-1=&Inoltra
-3=Creazione metafile del disco, attendere...
+0=Invio metafile
+1=&Invia
+3=Creazione metafile del disco, attendi...
 4=Aggiunta di %s...
-5=<a>Inoltra manualmente?</a>
+5=<a>Vuoi inviarlo manualmente?</a>
 6=Metafile:
 7=Email:
 8=Commento:
 9=Upload %s di %s
-10=Fai l'upload del metafile soprastante ad un host file come %s, poi <a>trasmetti il link di scaricamento</a>.
+10=Esegui l'upload del file meta soprastante in un hosting come %s, poi <a>invia il collegamento per il download</a>.
 
 [DIALOG_29]
 0=Azioni
-3=Azione a seguito della scansione
-4=Specificare un comando da eseguire dopo l'apertura del disco. <a>Macro supportate</a>.
-5=Azione a seguito del ripping
+3=Azione post scansione
+4=Specifica un comando da eseguire dopo l'apertura del disco. <a>Macro supportate</a>.
+5=Azione post ripping
 6=Specifica un comando da eseguire dopo il ripping del disco. <a>Macro supportate</a>.
 
 [DIALOG_30]
 0=Codice regionale
-3=Paese
+3=Nazione
 4=Codice
 
 [DIALOG_31]
@@ -212,21 +212,21 @@ Author=bovirus (bovirus@gmail.com)
 3=Impostazioni modificate, vuoi eseguire nuovamente la scansione delle unità?
 
 [DIALOG_32]
-0=Certificato decoder AACS
+0=Decoder certificato AACS
 3=Tipo:
-4=Criptazione bus:
+4=Flag:
 5=Lunghezza:
 6=ID:
 7=Riservato:
 8=Chiave pubblica:
 9=Firma:
-10=Numero unità:
+10=Numero dispositivo:
 11=Chaive privata:
 12=Incolla la chiave privata per verificarla
 
 [DIALOG_33]
-0=Cambia etichetta ISO
-1=&Cambia
+0=Modifica etichetta ISO
+1=&Modifica
 3=&File ISO:
 4=&Etichetta:
 6=...
@@ -250,18 +250,18 @@ Author=bovirus (bovirus@gmail.com)
 8=Installa
 9=Download aggiornamento - %s di %s
 10=La versione installata è aggiornata!\n\nLa versione installata (%s) è la versione più recente.
-11=Si è verificato un errore durante il recupero delle informazioni sull’aggiornamento.\nRiprova in seguito.
-12=Si è verificato un errore durante lo scaricamento dell’aggiornamento.\nRiprova in seguito.
+11=Si è verificato un errore durante il recupero delle informazioni sull’aggiornamento.\nRiprova più tardi.
+12=Si è verificato un errore durante il download dell’aggiornamento.\nRiprova più tardi.
 
 [DIALOG_B]
 1=Invia
 3=%s ha riscontrato un problema e deve essere chiuso. Ci scusiamo per l'inconveniente.
-4=Inviaci questo rapporto di errore per aiutare a risolvere il problema e migliorare questo software.
+4=Per aiutarci a risolvere il problema e migliorare questo software inviaci questo rapporto di errore.
 
 [DIALOG_C]
 0=Commento
 1=Invia
-3=Il tuo indirizzo email (opzionale)
+3=Indirizzo email (opzionale)
 4=Descrivi nel dettaglio il problema
 
 [STRING]
@@ -277,21 +277,21 @@ Author=bovirus (bovirus@gmail.com)
 9=B - Europa, Medio Oriente, Africa, Australia, Nuova Zelanda
 10=C - Russia, India, Cina, Resto del mondo
 11=Chiedi prima di aprire il disco
-12=Non mostrare più
-13=Nessuna unità CD/DVD/Blu-ray rilevata!\n\nPossibili ragioni:\n1. Non hai un'unità CD/DVD/Blu-ray.\n\n2. L'unità non è alimentata o non è collegata correttamente.
+12=Non visualizzare più
+13=Nessuna unità CD/DVD/Blu-ray rilevata!\n\nPossibili ragioni:\n1. Non è disponibile un'unità CD/DVD/Blu-ray.\n\n2. L'unità non è alimentata o non è collegata correttamente.
 14=Versione driver non corrispondente %d.%d≠%d.%d.\n\nReinstalla Xreveal.
-15=Alcuni dei file richiesti sono mancanti.\n\nReinstalla Xreveal.
+15=Alcuni dei file richiesti non sono presenti.\n\nReinstalla Xreveal.
 16=Xreveal non è stato installato correttamente.\n\nVuoi risolvere il problema?
-17=Per usare Xreveal devi riavviare il computer.\n\nVuoi riavviare il computer ora?
-18=Xreveal non funzionerà se %s è in esecuzione.\n\nVuoi chiudere %s?
+17=Per usare Xreveal è necessario riavviare il computer.\n\nVuoi riavviare il computer?
+18=Xreveal non funzionerà se '%s' è in esecuzione.\n\nVuoi chiudere '%s'?
 19=Xreveal sta eseguendo la scansione dell'unità %C:
-20=Il disco che hai inserito sarà disponibile a breve, attendi!
+20=Il disco inserito sarà disponibile a breve, attendi!
 21=Xreveal non è attivo per l'unità %C:!\n\nPer poter eseguire il ripping di un disco protetto da copia, Xreveal deve essere attivo per l'unità.
-22=La cartella '%s' non dispone di sufficiente spazio!\nÈ necessario un addizionale %s.
+22=La cartella '%s' non dispone di sufficiente spazio!\nÈ necessario spazio aggiuntivo %s.
 23=Copia di %s...
 24=%.1f MB/s
-25=Operazione completata con successo!
-26=La chiave del disco non è stata trovata in {%s}
+25=Operazione completata!
+26=Chiave del disco non trovata in {%s}
 27=Sito &web programma
 28=Xreveal non è riuscito ad aprire il disco, codice errore: %s.
 29=Unità
@@ -307,9 +307,9 @@ Author=bovirus (bovirus@gmail.com)
 39=%C:\[%S]
 40=&Stato
 41=&Apri in Explorer
-42=&Trasmissione metafile
-43=&Verificatore Hash contenuto...
-44=Crea immagine nel &disco fisso...
+42=&Invio file meta
+43=&Verifica hash contenuto...
+44=Crea immagine nella &cartella...
 45=Crea file i&mmagine ISO...
 46=&Abilita Xreveal
 47=&Disabilita Xreveal
@@ -322,24 +322,24 @@ Author=bovirus (bovirus@gmail.com)
 54=&Chiudi vassoio unità
 55=&Proprietà
 56=Nessuno
-57=Stai usando la versione gratuita, <a>aggiorna alla versione Pro</a> per sbloccare funzionalità aggiuntive.
-58=Il file [%s] esiste già.\nVuoi sostituire il file esistente?
-59=Sei sicuro di voler annullare l'operazione?
-60=La tua licenza è scaduta il %s.
+57=Stai usando la versione gratuita, per sbloccare funzionalità aggiuntive <a>aggiorna alla versione Pro</a>.
+58=Il file '%s' esiste già.\nVuoi sostituire il file esistente?
+59=Vuoi annullare l'operazione?
+60=La licenza è scaduta il %s.
 61=Riproduttore
 62=Codice regionale
 63=Cambiamenti disponibili
 64=Regione %C
 65=&Sempre in primo piano
 66=&Acquista
-67=Concesso in licenza a %s\nNumero massimo di utenti: %d\nData scadenza aggiornamenti gratuiti: %s
-68=Nessuna scadenza
+67=Concesso in licenza a %s\nNumero max utenti: %d\nData scadenza licenza: %s
+68=A vita
 69=&Registra...
 70=Grazie per la registrazione!
 71=La chiave di registrazione inserita non è corretta.
 72=Nessun disco
-73=Vuoi ripristinare TUTTE le opzioni ai valori predefiniti?\n\nSelezionando "No" verranno ripristinate semplicemente le opzioni della pagina attuale.
-74=RowID
+73=Vuoi ripristinare TUTTE le opzioni ai valori predefiniti?\n\nSelezionando "No" verranno ripristinate solo le opzioni della pagina attuale.
+74=ID Riga
 75=Stato
 76=Etichetta
 77=Tipo
@@ -349,7 +349,7 @@ Author=bovirus (bovirus@gmail.com)
 81=Aggiunto
 82=MKB
 83=Playlist principale
-84=BDP creato
+84=Creato BDP
 85=
 86=VID
 87=MK
@@ -358,27 +358,27 @@ Author=bovirus (bovirus@gmail.com)
 90=&Visualizza
 91=&Elimina '%s'
 92=Elimina &tutto
-93=Sei sicuro di voler eliminare '%s'?
-94=Sei sicuro di voler eliminare tutti i record?
+93=Vuoi eliminare '%s'?
+94=Vuoi eliminare tutti i record?
 95=Questa funzione è disponibile solo nella <a>versione Pro</a>.
-96=Aggiorna
+96=&Aggiorna
 97=&Modifica
 98=&Importa...
-99=&Export...
+99=&Esporta...
 100=Commento
 101=Verifica ISO
 102=Verifica cartella
 103=Verifica unità
-104=Supporta la criptazione del bus
-105=%s (Unità: %s)
-106=Apri cartella Log
+104=Supporta criptazione bus
+105=%s (unità: %s)
+106=Apri cartella registro eventi
 107=Opzioni
 108=Output dettagliato
 109=Versione linea di comando (Windows/macOS/Linux)
-110=Abbandona
-111=Specifico del rivenditore
-112=La cartella %s non esiste. Si desidera crearla?
-113=Una volta completato: 
+110=Interrompi
+111=Specifico produttore
+112=La cartella %s non esiste. Vuoi crearla?
+113=Quando completato: 
 114=Non fare nulla
 115=, 
 116=Espelli disco
@@ -390,22 +390,22 @@ Author=bovirus (bovirus@gmail.com)
 122=Iberna
 123=Blocca sistema
 124=Disconnetti
-125=Tutti i files
-126=Files ISO
-127=Files WAV
-128=Files KeyDB
-129=Files di Database
-130=Seleziona o trascina il file WAV qui
-131=Seleziona o trascina il file keydb.cfg qui
+125=Tutti i file
+126=File ISO
+127=File WAV
+128=File KeyDB
+129=File database
+130=Seleziona/trascina qui il file WAV
+131=Seleziona/trascina qui il file keydb.cfg
 132=%u%% completato
-133=Errore di lettura dall'unità %C:!\nSettori: %u-%u
-134=Errore nella lettura di %s!\nSettori: %u-%u
-135=Abbandonato!
+133=Errore lettura dall'unità %C:!\nSettori: %u-%u
+134=Errore lettura in %s!\nSettori: %u-%u
+135=Interrotto!
 136=Copia...
 137=Funzione Pro
-138=Deregistra
+138=De-registra
 139=Stai per creare un file immagine protetto. Il file può essere letto unicamente da un'unità virtuale, se xReveal è installato e in esecuzione!\n\nVuoi continuare?
-140=Eliminare file incompleto?\n\n%s
+140=Vuoi eliminare il file incompleto?\n\n%s
 141=Chiaro
 142=Scuro
 143=Sistema
@@ -414,24 +414,24 @@ Author=bovirus (bovirus@gmail.com)
 146=Riprendi l'operazione
 147=Programmi
 148=Occupato
-149=&Verifica disponibilità aggiornamenti
+149=&Verifica aggiornamenti
 150=&Salva...
 151=Abilita LibreDrive
 152=Certificato unità
 153=Abilita
 154=Disabilita
 155=Messo in pausa
-156=Infinito
-157=Sei sicuro di voler deregistrare il programma?
-158=Nessuna unità è scansionata da Xreveal! Puoi modifcare le impostazioni in <a>My Drives</a>.
-159=Spazio insufficiente nell'unità di destinazione %C:!
+156=All'infinito
+157=Vuoi de-registrare il programma?
+158=Nessuna unità è stata scansionata da Xreveal! Puoi modificare le impostazioni in <a>Mie unità</a>.
+159=Spazio insufficiente nell'unità destinazione %C:!
 160=Azione
-161=Riesegui la scansione
+161=Ri-scansione
 162=Opzionale
-163=File inoltrato con successo, grazie!
+163=Invio file completato, grazie!
 164=Chiudi questa finestra
-165=Cambia etichetta ISO...
+165=Modifica etichetta ISO...
 166=&Da cartella a ISO...
-167=Seleziona o trascina un file ISO qui
-168=Seleziona o trascina una cartella qui
+167=Seleziona o trascina qui un file ISO
+168=Seleziona o trascina qui una cartella
 169=&Aiuto
