--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -149,7 +149,7 @@ Author=bovirus (bovirus@gmail.com)
 6=Rimuovi restrizioni &genitori
 
 [DIALOG_21]
-0=Mie dischi
+0=Miei dischi
 
 [DIALOG_22]
 1=Sì
