--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0407
 Name=German (Deutsch)
-Version=2.8.6
+Version=2.8.9
 Author=The Punisher
 1=OK
 2=Abbrechen
@@ -220,22 +220,22 @@ Author=The Punisher
 7=Reserviert:
 8=Public key:
 9=Signatur:
-10=Device number:
+10=Gerätenummer:
 11=Private key:
-12=Paste the private key to verify it
+12=Private key zum überprüfen einfügen
 
 [DIALOG_33]
-0=Change ISO Label
-1=&Change
-3=&ISO file:
+0=ISO Label ändern
+1=&Ändern
+3=&ISO Datei:
 4=&Label:
 6=...
-7=di:name
+7=di:Name
 
 [DIALOG_34]
-0=Folder to ISO
-3=&Folder:
-4=&ISO file:
+0=Ordner nach ISO
+3=&Ordner:
+4=&ISO Datei:
 5=&Label:
 6=Format:
 7=Start
@@ -430,8 +430,8 @@ Author=The Punisher
 162=Optional
 163=Die Datei wurde erfolgreich übermittelt, vielen Dank!
 164=Dieses Fenster schließen.
-165=Change ISO &Label...
-166=Folder to &ISO...
-167=Please select or drag a ISO file here
-168=Please select or drag a folder here
+165=Ändere ISO &Label...
+166=&Ordner nach ISO...
+167=Bitte wählen Sie eine ISO Datei aus oder ziehen eine ISO hierhin.
+168=Bitte wählen Sie einen Ordner aus oder ziehen einen Ordner hierhin.
 169=Hilfe
