Update Swedish translations in Xreveal.ini for 2.8.9
Updated the Swedish language file for Xreveal 2.8.9

--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x041D
 Name=Swedish (Svenska)
-Version=2.8.6
+Version=2.8.9
 Author=Harry Samwel, Sopor
 1=OK
 2=Avbryt
@@ -84,7 +84,7 @@ Author=Harry Samwel, Sopor
 0=KeyDB
 3=Xreveal innehåller ingen dekrypteringsnyckel, du behöver en nyckeldatabas för att få det att fungera. <a>Läs mer</a>.
 4=Sökväg för KeyDB
-6=Hitta nycklar på nätet om inga hittas lokalt
+6=Aktivera internet access
 
 [DIALOG_13]
 0=Mina enheter
@@ -138,8 +138,8 @@ Author=Harry Samwel, Sopor
 
 [DIALOG_19]
 0=Snabbtangenter
-3=Du kan skapa systemomfattande snabbknappar för att trigga vissa funktioner medan Xreveal körs.
-4=Visa Xreveal i systemfältet
+3=Skapa systemomfattande snabbknappar för att trigga specifika funktioner medan Xreveal körs.
+4=Visa Xreveal meny
 
 [DIALOG_20]
 0=HD DVD
@@ -221,22 +221,22 @@ Author=Harry Samwel, Sopor
 8=Allmän nyckel:
 9=Signatur:
 10=Enhetsnummer:
-11=Private key:
-12=Paste the private key to verify it
+11=Privat nyckel:
+12=Klistra den privata nyckeln för att verifiera den
 
 [DIALOG_33]
-0=Change ISO Label
-1=&Change
-3=&ISO file:
-4=&Label:
+0=Ändra ISO titel
+1=Ändra
+3=ISO fil:
+4=Titel:
 6=...
-7=di:name
+7=di:namn
 
 [DIALOG_34]
-0=Folder to ISO
-3=&Folder:
-4=&ISO file:
-5=&Label:
+0=Mapp till ISO
+3=Mapp:
+4=ISO fil:
+5=Titel:
 6=Format:
 7=Start
 
@@ -331,7 +331,7 @@ Author=Harry Samwel, Sopor
 63=Återstående antal ändringar
 64=Region %C
 65=Behåll fönstret längst fram
-66=Köpa
+66=Köp nu
 67=Licensierad till %s\r\nMax användare: %d\r\nFria uppdateringar till: %s
 68=Alltid
 69=Registrering...
@@ -430,8 +430,9 @@ Author=Harry Samwel, Sopor
 162=Valfri
 163=Filen skickades, tack så mycket!
 164=Stäng detta fönster
-165=Change ISO &Label...
+165=Ändra ISO titel...
 166=Folder to &ISO...
-167=Please select or drag a ISO file here
-168=Please select or drag a folder here
+167=Välj eller dra en ISO fil hit
+168=Välj eller dra en mapp hit
 169=Hjälp
+
