Update Swedish language entries in Xreveal_SVE.ini
Missed translation updated.

--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -431,8 +431,9 @@ Author=Harry Samwel, Sopor
 163=Filen skickades, tack så mycket!
 164=Stäng detta fönster
 165=Ändra ISO titel...
-166=Folder to &ISO...
+166=Mapp till ISO...
 167=Välj eller dra en ISO fil hit
 168=Välj eller dra en mapp hit
 169=Hjälp
+
 
