--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0402
 Name=Bulgarian (Български)
-Version=2.8.0
+Version=2.8.9
 Author=jekovcar
 1=ОК
 2=Отказ
@@ -45,7 +45,7 @@ Author=jekovcar
 9=Тема:
 10=Използвай &AES хардуерно ускорение
 11=<a>Бенчмарк</a>
-12=Show &information window for new media
+12=Покажи &инфо прозорец за нови медии
 
 [DIALOG_9]
 0=CD
@@ -70,12 +70,12 @@ Author=jekovcar
 4=Премахни BD+
 5=Премахни RC (регионален код)
 6=Регионален код на диска:
-7=Remove &country code
+7=Премахни &код страна
 8=Премахни UOPs (Забрани потребителски операции)
 9=Премахни CCI (Инфо контрол за копиране)
 10=Деактивирай BD-Live
 11=Симулирай подключен 3D дисплей
-12=Rename AACS &folder to
+12=Преименувай AACS &папка на
 15=Премахни &досадните реклами и трейлъри
 16=Премахни видео поредици &по-кратки от %s минутаs
 17=Прозрачност на субтитрите
@@ -108,9 +108,9 @@ Author=jekovcar
 14=Създай &md5 файл с контролна сума
 15=Създай &dvdid.xml
 16=Създай лог файл
-17=Create disc.&metaiso
+17=Създай disc.&metaiso
 18=Копирай само VIDEO_TS folder
-19=Verify &M2TS sync bytes
+19=Провери &M2TS sync байтове
 
 [DIALOG_15]
 0=Xreveal
@@ -128,9 +128,9 @@ Author=jekovcar
 0=Рипър
 3=Брой опити за четене:
 4=Прекрати, когато грешките надвишат :
-5=Copy SSIF folder while ripping Blu-ray 3D to folder
-6=Append the drive status log to the rip log
-7=Show warning when creating a protected image
+5=Копирай SSIF папка, докато извлича Blu-ray 3D в папка
+6=Добави лог състояние на устройство към лог извличане
+7=Показвай предупреждение при създаване на защитен имидж
 
 [DIALOG_18]
 0=Регистрация на Xreveal
@@ -184,16 +184,16 @@ Author=jekovcar
 6=Звук за грешка:
 
 [DIALOG_28]
-0=Metafile submission
-1=&Submit
+0=Изпрати Metafile
+1=&Изпрати
 3=Creating the disc metafile, please wait...
 4=Добавяне на %s...
-5=<a>Submit manually?</a>
+5=<a>Изпращане ръчно?</a>
 6=Metafile:
 7=Email:
-8=Description:
-9=Uploading %s of %s
-10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
+8=Описание:
+9=Качване на %s от %s
+10=Моля, качете горния Metafile на файлов хост като %s, след което <a>изпратете линк за изтегляне</a>.
 
 [DIALOG_29]
 0=Действия
@@ -208,37 +208,37 @@ Author=jekovcar
 4=Код
 
 [DIALOG_31]
-0=Settings Change
-3=Settings have changed, do you want to rescan drives?
+0=Промяна на настройки
+3=Настройките са променени, да сканира отново устройствата?
 
 [DIALOG_32]
-0=AACS Certificate Decoder
-3=Type:
-4=Flags:
-5=Length:
+0= Декодер на сертификати AACS
+3=Тип:
+4=Флагове:
+5=Дължина:
 6=ID:
-7=Reserved:
-8=Public key:
-9=Signature:
-10=Device number:
-11=Private key:
-12=Paste the private key to verify it
+7=Запазено:
+8=Публичен ключ:
+9=Подпис:
+10=Номер на устройството:
+11=Частен ключ:
+12=Вмъкнете частния ключ, за да го проверите
 
 [DIALOG_33]
-0=Change ISO Label
-1=&Change
-3=&ISO file:
-4=&Label:
+0=Промяна на етикета ISO
+1=&Промяна
+3=&ISO файл:
+4=&Етикет:
 6=...
-7=di:name
+7=di:име
 
 [DIALOG_34]
-0=Folder to ISO
-3=&Folder:
-4=&ISO file:
-5=&Label:
-6=Format:
-7=Start
+0=Папка към ISO
+3=&Папка:
+4=&ISO файл:
+5=&Етикет:
+6=Формат:
+7=Старт
 
 [DIALOG_A]
 0=Актуализация софтуер
@@ -255,7 +255,7 @@ Author=jekovcar
 
 [DIALOG_B]
 1=Изпрати
-3=%s е срещнал проблем и трябва да се затвори. Извиняваме се за неудобството.
+3=%s срещна проблем и трябва да се затвори. Извиняваме се за неудобството.
 4=Моля, изпратете този отчет за грешка, за да помогнем за отстраняването на проблема и подобряването на този софтуер.
 
 [DIALOG_C]
@@ -292,7 +292,7 @@ Author=jekovcar
 24=%.1f MB/s
 25=Операцията приключи успешно!
 26=Няма намерен ключ за дешифриране в {%s}
-27=&Homepage
+27=&Сайт
 28=Xreveal неуспешно отваряне на диска, код на грешка: %s.
 29=Диск
 30=Доставчик
@@ -307,7 +307,7 @@ Author=jekovcar
 39=%C:\[%S]
 40=&Състояние
 41=&Отвори в Explorer
-42=&Създай дъмп файл
+42=&Изпрати Metafile
 43=Съдържание Хеш Верификатор...
 44=Извличане на &твърд диск...
 45=Извличане в &имидж...
@@ -364,7 +364,7 @@ Author=jekovcar
 96=&Опресни
 97=&Редактиране
 98=&Импорт...
-99=&Export...
+99=&Експорт...
 100=Коментар:
 101=Проверка ISO
 102=Проверка На Папка
@@ -422,16 +422,16 @@ Author=jekovcar
 154=Изключи
 155=Пауза
 156=Безкрай
-157=Are you sure you want to unregister?
-158=No drives are scanned by Xreveal! You can change the settings in <a>My Drives</a>.
-159=There is no enough space on destination drive %C:!
-160=Action
-161=Rescan
-162=Optional
-163=File submitted successfully, thank you!
-164=Close this window
-165=Change ISO &Label...
-166=Folder to &ISO...
-167=Please select or drag a ISO file here
-168=Please select or drag a folder here
+157=Сигурни ли сте, да се разрегистрира?
+158=Няма сканирани устройства от Xreveal! Можете да промените настройките в <a>Моите устройства</a>.
+159=Няма достатъчно място на устройство %C:!
+160=Действие
+161=Прескан
+162=По избор
+163=Файлът бе изпратен успешно, благодаря!
+164=Затвори прозореца
+165=Промяна на ISO & етикет...
+166=Папка към &ISO...
+167=Моля, изберете или плъзнете ISO файл тук
+168=Моля, изберете или плъзнете папка тук
 169=Помощ
