Update Xreveal_RUS.ini to version 2.8.9
Updated the Russian language file for Xreveal to version 2.8.9, reflecting changes in dialog texts and information.

--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0419
 Name=Russian (Русский)
-Version=2.8.0
+Version=2.8.9
 Author=jekovcar
 1=ОК
 2=Отмена
@@ -45,7 +45,7 @@ Author=jekovcar
 9=Тема:
 10=Использовать аппаратное ускорение &AES
 11=<a>Бенчмарк</a>
-12=Show &information window for new media
+12=Показать &инфо окно для новых медиафайлов
 
 [DIALOG_9]
 0=CD
@@ -108,7 +108,7 @@ Author=jekovcar
 14=Создать файл контрольной суммы &md5
 15=Создать &dvdid.xml
 16=Создать файл журнала
-17=Create disc.&metaiso
+17=Создать диск.&metaiso
 18=Копировать только VIDEO_TS folder
 19=Verify &M2TS sync bytes
 
@@ -128,9 +128,9 @@ Author=jekovcar
 0=Риппер
 3=Счет попыток чтения:
 4=Прервать, если игнорируемых ошибок превышает :
-5=Copy SSIF folder while ripping Blu-ray 3D to folder
-6=Append the drive status log to the rip log
-7=Show warning when creating a protected image
+5=Копировать папку SSIF при рипе Blu-ray 3D в папку
+6=Добавлять лог состояния диска в лог рипа
+7=Показать предупреждение при создании защищённого образа
 
 [DIALOG_18]
 0=Регистрация Xreveal
@@ -184,16 +184,16 @@ Author=jekovcar
 6=Звук ошибки:
 
 [DIALOG_28]
-0=Metafile submission
-1=&Submit
-3=Creating the disc metafile, please wait...
+0=Отправка метафайла
+1=&Отправить
+3=Создание метафайла диска, подождите...
 4=Добавление %s...
-5=<a>Submit manually?</a>
-6=Metafile:
+5=<a>Отправить вручную?</a>
+6=Метафайл:
 7=Email:
-8=Description:
-9=Uploading %s of %s
-10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
+8=Описание:
+9=Загрузка %s из %s
+10=Пожалуйста, загрузите указанный выше метафайл на файловый хостинг, такой как %s, затем <a>отправьте ссылку для скачивания</a>.
 
 [DIALOG_29]
 0=Действия
@@ -208,37 +208,37 @@ Author=jekovcar
 4=Код
 
 [DIALOG_31]
-0=Settings Change
-3=Settings have changed, do you want to rescan drives?
+0=Изменение настроек
+3=Настройки изменились, хотите повторно просканировать диски?
 
 [DIALOG_32]
-0=AACS Certificate Decoder
-3=Type:
-4=Flags:
-5=Length:
-6=ID:
-7=Reserved:
-8=Public key:
-9=Signature:
-10=Device number:
-11=Private key:
-12=Paste the private key to verify it
+0=Декодер сертификатов AACS
+3=Тип:
+4=Флаги:
+5=Длина:
+6=Идентификатор:
+7=Резерв:
+8=Открытый ключ:
+9=Подпись:
+10=Номер устройства:
+11=Закрытый ключ:
+12=Вставьте закрытый ключ для его проверки
 
 [DIALOG_33]
-0=Change ISO Label
-1=&Change
-3=&ISO file:
-4=&Label:
+0=Изменить метку ISO
+1=&Изменить
+3=&ISO файл:
+4=&Метка:
 6=...
-7=di:name
+7=di:имя
 
 [DIALOG_34]
-0=Folder to ISO
-3=&Folder:
-4=&ISO file:
-5=&Label:
-6=Format:
-7=Start
+0=Папка в ISO
+3=&Папка:
+4=&Файл ISO:
+5=&Метка:
+6=Формат:
+7=Старт
 
 [DIALOG_A]
 0=Обновление программы
@@ -364,7 +364,7 @@ Author=jekovcar
 96=Обновить
 97=&Редактировать
 98=&Импорт...
-99=&Export...
+99=&Экспорт...
 100=Комментарий
 101=Проверить ISO
 102=Проверить папку
@@ -422,16 +422,16 @@ Author=jekovcar
 154=Отключить
 155=Приостановлено
 156=Без конца
-157=Are you sure you want to unregister?
-158=No drives are scanned by Xreveal! You can change the settings in <a>My Drives</a>.
-159=There is no enough space on destination drive %C:!
-160=Action
-161=Rescan
-162=Optional
-163=File submitted successfully, thank you!
-164=Close this window
-165=Change ISO &Label...
-166=Folder to &ISO...
-167=Please select or drag a ISO file here
-168=Please select or drag a folder here
+157=Вы уверены, что хотите отменить регистрацию?
+158=Ни один диск не сканируется Xreveal! Вы можете изменить настройки в <a>Мои диски</a>.
+159=На целевом диске %C: недостаточно места!
+160=Действие
+161=Пересканировать
+162=Необязательно
+163=Файл успешно отправлен, спасибо!
+164=Закрыть это окно
+165=Изменить ISO и метку...
+166=Папка в &ISO...
+167=Пожалуйста, выберите или перетащите ISO-файл сюда
+168=Пожалуйста, выберите или перетащите папку сюда
 169=Помощь
