--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0412
 Name=Korean (한국어)
-Version=2.8.4
+Version=2.8.9
 Author=비너스걸 (VenusGirl)
 1=확인
 2=취소
@@ -128,9 +128,9 @@ Author=비너스걸 (VenusGirl)
 0=리퍼
 3=읽기 재시도 횟수:
 4=무시된 오류가 초과하면 중단 :
-5=Copy SSIF folder while ripping Blu-ray 3D to folder
-6=Append the drive status log to the rip log
-7=Show warning when creating a protected image
+5=블루레이 3D 추출 중 SSIF 폴더를 해당 폴더에 복사
+6=드라이브 상태 로그를 추출 로그에 추가
+7=보호된 이미지 생성 시 경고 표시
 
 [DIALOG_18]
 0=등록
@@ -184,16 +184,16 @@ Author=비너스걸 (VenusGirl)
 6=오류 사운드:
 
 [DIALOG_28]
-0=Metafile submission
-1=&Submit
-3=Creating the disc metafile, please wait...
+0=메타파일 제출
+1=제출(&S)
+3=디스크 메타파일을 만드는 중, 잠시만 기다려 주세요...
 4=%s 추가 중...
-5=<a>Submit manually?</a>
-6=Metafile:
-7=Email:
-8=Description:
-9=Uploading %s of %s
-10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
+5=<a>수동으로 제출하시겠습니까?</a>
+6=메타 파일:
+7=이메일:
+8=설명:
+9=%s / %s 업로드 중
+10=위의 메타파일을 %s와 같은 파일 호스트에 업로드한 다음 <a>다운로드 링크를 제출</a>하세요.
 
 [DIALOG_29]
 0=동작
@@ -208,37 +208,37 @@ Author=비너스걸 (VenusGirl)
 4=코드
 
 [DIALOG_31]
-0=Settings Change
-3=Settings have changed, do you want to rescan drives?
+0=설정 변경
+3=설정이 변경되었습니다. 드라이브를 다시 검색하시겠습니까?
 
 [DIALOG_32]
-0=AACS Certificate Decoder
-3=Type:
-4=Flags:
-5=Length:
+0=AACS 인증서 디코더
+3=유형:
+4=플래그:
+5=길이:
 6=ID:
-7=Reserved:
-8=Public key:
-9=Signature:
-10=Device number:
-11=Private key:
-12=Paste the private key to verify it
+7=예약됨:
+8=공개 키:
+9=서명:
+10=장치 번호:
+11=개인 키:
+12=개인 키를 붙여넣어 확인하세요
 
 [DIALOG_33]
-0=Change ISO Label
-1=&Change
-3=&ISO file:
-4=&Label:
+0=ISO 레이블 변경
+1=변경(&C)
+3=ISO 파일(&I):
+4=레이블(&L):
 6=...
 7=di:name
 
 [DIALOG_34]
-0=Folder to ISO
-3=&Folder:
-4=&ISO file:
-5=&Label:
-6=Format:
-7=Start
+0=폴더에서 ISO로 변환
+3=폴더(&F):
+4=ISO 파일(&I):
+5=레이블(&L):
+6=형식:
+7=시작
 
 [DIALOG_A]
 0=소프트웨어 업데이트
@@ -427,11 +427,11 @@ Author=비너스걸 (VenusGirl)
 159=대상 드라이브에 공간이 충분하지 않습니다 %C:!
 160=동작
 161=다시 검색
-162=Optional
-163=File submitted successfully, thank you!
-164=Close this window
-165=Change ISO &Label...
-166=Folder to &ISO...
-167=Please select or drag a ISO file here
-168=Please select or drag a folder here
+162=선택 사항
+163=파일이 성공적으로 제출되었습니다. 감사합니다!
+164=이 창 닫기
+165=ISO 레이블 변경(&L)...
+166=폴더를 ISO로 변경(&I)...
+167=여기에 ISO 파일을 선택하거나 드래그하세요
+168=여기에 폴더를 선택하거나 드래그하세요
 169=도움말
