--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -131,6 +131,7 @@ Author=Fresta, updated to 2.8.9 by adijos
 5=Skopiuj folder SSIF podczas zgrywania Blu-ray 3D do folderu
 6=Dołącz zawartość statusu dysku do dziennika zgrywania
 7=Pokaż ostrzeżenie podczas tworzenia nieodszyfrowanego obrazu
+8=Enable the built-in ripper for &virtual drives
 
 [DIALOG_18]
 0=Zarejestruj Xreveal
@@ -152,10 +153,6 @@ Author=Fresta, updated to 2.8.9 by adijos
 0=Moje Dyski
 
 [DIALOG_22]
-1=Tak
-2=Nie
-3=AKtualizacja do Pro
-4=Klucz dysku nie został znaleziony w keydb.cfg. Chcesz poszukać go online?
 
 [DIALOG_23]
 0=Informacje o dysku
@@ -239,6 +236,39 @@ Author=Fresta, updated to 2.8.9 by adijos
 5=&Etykieta:
 6=Format:
 7=Start
+
+[DIALOG_35]
+0=Destination Templates
+3=&Add
+4=&Edit
+5=&Delete
+6=Move &Up
+7=&Move Down
+8=Note: the first item is the default template.
+
+[DIALOG_36]
+0=Destination
+3=Supported variables and <a>transforms</a>. Format: $(variable:transform), all names are case-insensitive.
+4=Replace underscores in $(DiscLabel) to spaces
+
+[DIALOG_37]
+0=DestDir
+51=...
+52=$(DestDir):
+
+[DIALOG_38]
+0=DiscTypeMap
+3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
+4=&DVD:
+5=&HD DVD:
+6=&BD:
+7=&UHD:
+
+[DIALOG_39]
+0=Replace or Save as
+3=The destination <a>%s</a> aready exists.
+4=Replace
+5=Save as
 
 [DIALOG_A]
 0=Aktualizacja
@@ -350,7 +380,7 @@ Author=Fresta, updated to 2.8.9 by adijos
 82=MKB
 83=Główna playlista
 84=BD+ data
-85=
+85=LayerBreak
 86=VID
 87=MK
 88=VUK
@@ -435,3 +465,20 @@ Author=Fresta, updated to 2.8.9 by adijos
 167=Proszę wybrać lub przeciągnąć tutaj plik ISO
 168=Proszę wybrać lub przeciągnąć tutaj folder
 169=Pomoc
+170=Name
+171=Value
+172=User variables (Right-click an item to edit the value)
+173=Disc variables
+174=My Discs variables
+175=Drive variables
+176=Save as...
+177=Edit Destination Templates...
+178=Copy '%s'
+179=Add disc that failed to open
+180=Add disc in virtual drives
+181=Add unprotected disc
+182=Add %s
+183=&Try Pro
+184=AKtualizacja do Pro
+185=This feature is only available to users with a Xreveal Pro license. You can try Pro for free or buy a license to unlock Pro features.
+186=The decryption key was not found. You can try Pro for free or buy a license to unlock Pro features.
