--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -131,6 +131,7 @@ Author=Tanuki
 5=在将蓝光3D复制到文件夹时复制SSIF文件夹
 6=将驱动器状态内容追加到复制日志
 7=在创建受保护的ISO时显示警告
+8=Enable the built-in ripper for &virtual drives
 
 [DIALOG_18]
 0=注册
@@ -152,10 +153,6 @@ Author=Tanuki
 0=我的光碟
 
 [DIALOG_22]
-1=是
-2=否
-3=升级至专业版
-4=在 keydb.cfg 中未找到密钥，是否在线查找密钥？
 
 [DIALOG_23]
 0=碟片信息
@@ -239,6 +236,39 @@ Author=Tanuki
 5=卷标(&L):
 6=格式:
 7=开始
+
+[DIALOG_35]
+0=Destination Templates
+3=&Add
+4=&Edit
+5=&Delete
+6=Move &Up
+7=&Move Down
+8=Note: the first item is the default template.
+
+[DIALOG_36]
+0=Destination
+3=Supported variables and <a>transforms</a>. Format: $(variable:transform), all names are case-insensitive.
+4=Replace underscores in $(DiscLabel) to spaces
+
+[DIALOG_37]
+0=DestDir
+51=...
+52=$(DestDir):
+
+[DIALOG_38]
+0=DiscTypeMap
+3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
+4=&DVD:
+5=&HD DVD:
+6=&BD:
+7=&UHD:
+
+[DIALOG_39]
+0=Replace or Save as
+3=The destination <a>%s</a> aready exists.
+4=Replace
+5=Save as
 
 [DIALOG_A]
 0=软件更新
@@ -350,7 +380,7 @@ Author=Tanuki
 82=MKB
 83=主播放列表
 84=BD+创建日期
-85=
+85=LayerBreak
 86=VID
 87=MK
 88=VUK
@@ -435,3 +465,20 @@ Author=Tanuki
 167=请选择或拖动ISO文件至此
 168=请选择或拖动文件夹至此
 169=帮助
+170=Name
+171=Value
+172=User variables (Right-click an item to edit the value)
+173=Disc variables
+174=My Discs variables
+175=Drive variables
+176=Save as...
+177=Edit Destination Templates...
+178=Copy '%s'
+179=Add disc that failed to open
+180=Add disc in virtual drives
+181=Add unprotected disc
+182=Add %s
+183=&Try Pro
+184=升级至专业版
+185=This feature is only available to users with a Xreveal Pro license. You can try Pro for free or buy a license to unlock Pro features.
+186=The decryption key was not found. You can try Pro for free or buy a license to unlock Pro features.
