--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0409
 Name=English
-Version=2.8.9
+Version=2.9.0
 Author=
 1=OK
 2=Cancel
@@ -94,9 +94,9 @@ Author=
 
 [DIALOG_14]
 1=Start
-3=Source
-4=Destination
-5=Options
+3=&Source
+4=&Destination
+5=&Options
 6=Info
 7=Type:
 8=Size:
@@ -104,13 +104,13 @@ Author=
 10=Free space:
 11=Capacity:
 12=&Keep protection
-13=Verify content &hash
-14=Create &MD5 checksum file
-15=Create &dvdid.xml
-16=Create log file
+13=&Verify content hash
+14=Create MD5 &checksum file
+15=Create dvdid.&xml
+16=Create &log file
 17=Create disc.&metaiso
 18=Copy only &VIDEO_TS folder
-19=Verify &M2TS sync bytes
+19=Verify M2TS sync &bytes
 
 [DIALOG_15]
 0=Xreveal
@@ -128,9 +128,10 @@ Author=
 0=Ripper
 3=Read retry count:
 4=Abort when ignored errors exceed:
-5=Copy SSIF folder while ripping Blu-ray 3D to folder
-6=Append the drive status log to the rip log
+5=Copy SSIF folder when ripping Blu-ray 3D to folder
+6=Append the drive info log to the rip log
 7=Show warning when creating a protected image
+8=Enable the built-in ripper for &virtual drives
 
 [DIALOG_18]
 0=Register Xreveal
@@ -152,10 +153,6 @@ Author=
 0=My Discs
 
 [DIALOG_22]
-1=Yes
-2=No
-3=Upgrade to Pro
-4=The disc key was not found in keydb.cfg. Do you want to find it online?
 
 [DIALOG_23]
 0=Disc Information
@@ -184,7 +181,7 @@ Author=
 6=Error sound:
 
 [DIALOG_28]
-0=Metafile submission
+0=Submit Metafile
 1=&Submit
 3=Creating the disc metafile, please wait...
 4=Adding %s...
@@ -198,9 +195,9 @@ Author=
 [DIALOG_29]
 0=Actions
 3=Post-Scan action
-4=Specify a command to run after opening disc. <a>Supported macros</a>.
+4=Specify a command to run after opening disc. <a>Supported variables</a>.
 5=Post-Rip action
-6=Specify a command to run after ripping disc. <a>Supported macros</a>.
+6=Specify a command to run after ripping disc. <a>Supported variables</a>.
 
 [DIALOG_30]
 0=Country code
@@ -239,6 +236,39 @@ Author=
 5=&Label:
 6=Format:
 7=Start
+
+[DIALOG_35]
+0=Destination Templates
+3=&Add
+4=&Edit
+5=&Delete
+6=Move &Up
+7=&Move Down
+8=Note: the first item is the default template.
+
+[DIALOG_36]
+0=Destination
+3=Supported variables and <a>transforms</a>. Format: $(variable:transform), all names are case-insensitive.
+4=Replace underscores in $(DiscLabel) to spaces
+
+[DIALOG_37]
+0=DestDir
+51=...
+52=$(DestDir):
+
+[DIALOG_38]
+0=DiscTypeMap
+3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
+4=&DVD:
+5=&HD DVD:
+6=&BD:
+7=&UHD:
+
+[DIALOG_39]
+0=Replace or Save as
+3=The destination <a>%s</a> aready exists.
+4=Replace
+5=Save as
 
 [DIALOG_A]
 0=Software Update
@@ -286,12 +316,12 @@ Author=
 18=Xreveal will not work if %s is running.\n\nDo you want to close it?
 19=Xreveal is scanning drive %C:
 20=The disc you have inserted will be available shortly, please wait!
-21=drive %C: is not in the on-the-fly decryption mode!\n\nFor more information, please refer to the Status window in Settings.
+21=drive %C: is not in the on-the-fly decryption mode!\n\nFor more information, please refer to the Info window in Settings.
 22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=Copying %s...
 24=%.1f MB/s
 25=Operation completed successfully!
-26=The disc key is not found! {%s}
+26=No decryption key found! {%s}
 27=&Homepage
 28=Failed to open disc, error code: %s.
 29=Drive
@@ -307,7 +337,7 @@ Author=
 39=%C:\[%S]
 40=&Status
 41=&Open in Explorer
-42=&Metafile submission
+42=Submit &Metafile
 43=&Content Hash Verifier...
 44=Rip to &Folder...
 45=Rip to &ISO File...
@@ -322,7 +352,7 @@ Author=
 54=&Load
 55=&Properties
 56=None
-57=You are using the free version, <a>upgrade to Pro</a> to unlock extra features.
+57=You are using the free version, <a>upgrade to Pro</a> to unlock Pro features.
 58=%s already exists.\nDo you want to replace it?
 59=Are you sure you want to cancel?
 60=Your license has expired on %s.
@@ -350,7 +380,7 @@ Author=
 82=MKB
 83=Main playlist
 84=BD+ created
-85=
+85=LayerBreak
 86=VID
 87=MK
 88=VUK
@@ -435,3 +465,20 @@ Author=
 167=Please select or drag a ISO file here
 168=Please select or drag a folder here
 169=&Help
+170=Name
+171=Value
+172=User variables (Right-click an item to edit the value)
+173=Disc variables
+174=My Discs variables
+175=Drive variables
+176=Save as...
+177=Edit Destination Templates...
+178=Copy '%s'
+179=Add disc that failed to open
+180=Add disc in virtual drives
+181=Add unprotected disc
+182=Add %s
+183=&Try Pro
+184=Upgrade to Xreveal Pro
+185=This feature is only available to users with a Xreveal Pro license. You can try Pro for free or buy a license to unlock Pro features.
+186=The decryption key was not found. You can try Pro for free or buy a license to unlock Pro features.
