--- a/Xreveal_FIN.ini
+++ b/Xreveal_FIN.ini
@@ -84,7 +84,7 @@ Author=TJL
 0=KeyDB
 3=Xreveal ei sisällä salauksenpurkuavainta, joten tarvitset avaintietokannan. <a>Lue lisää</a>.
 4=keydb.cfg sijainti
-6=&Find keys online if not found locally
+6=&Enable internet access
 
 [DIALOG_13]
 0=My Drives
@@ -94,23 +94,23 @@ Author=TJL
 
 [DIALOG_14]
 1=Start
-3=Source
-4=Destination
-5=Options
+3=&Source
+4=&Destination
+5=&Options
 6=Info
 7=Type:
-8=Koko:
+8=Size:
 9=Protection:
 10=Free space:
 11=Capacity:
 12=&Keep protection
-13=Verify content &hash
-14=Create &MD5 checksum file
-15=Create &dvdid.xml
-16=Create log file
+13=&Verify content hash
+14=Create MD5 &checksum file
+15=Create dvdid.&xml
+16=Create &log file
 17=Create disc.&metaiso
 18=Copy only &VIDEO_TS folder
-19=Verify &M2TS sync bytes
+19=Verify M2TS sync &bytes
 
 [DIALOG_15]
 0=Xreveal
@@ -127,10 +127,11 @@ Author=TJL
 [DIALOG_17]
 0=Ripper
 3=Read retry count:
-4=Abort when ignored errors exceed :
-5=Copy SSIF folder while ripping Blu-ray 3D to folder
-6=Append the drive status log to the rip log
+4=Abort when ignored errors exceed:
+5=Copy SSIF folder when ripping Blu-ray 3D to folder
+6=Append the drive info log to the rip log
 7=Show warning when creating a protected image
+8=Enable the built-in ripper for &virtual drives
 
 [DIALOG_18]
 0=Rekisteröinti
@@ -138,8 +139,8 @@ Author=TJL
 
 [DIALOG_19]
 0=Pikanäppäimet
-3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
-4=Show Xreveal system tray menu
+3=Create system-wide hotkeys to trigger specific commands while Xreveal is running.
+4=Show Xreveal menu
 
 [DIALOG_20]
 0=HD DVD
@@ -152,10 +153,6 @@ Author=TJL
 0=My Discs
 
 [DIALOG_22]
-1=Yes
-2=No
-3=Päivitä Pro-versioon
-4=The disc key was not found in keydb.cfg. Do you want to find it online?
 
 [DIALOG_23]
 0=Disc Information
@@ -184,7 +181,7 @@ Author=TJL
 6=Error sound:
 
 [DIALOG_28]
-0=Metafile submission
+0=Submit Metafile
 1=&Submit
 3=Creating the disc metafile, please wait...
 4=Adding %s...
@@ -198,9 +195,9 @@ Author=TJL
 [DIALOG_29]
 0=Actions
 3=Post-Scan action
-4=Specify a command to run after opening disc. <a>Supported macros</a>.
+4=Specify a command to run after opening disc. <a>Supported variables</a>.
 5=Post-Rip action
-6=Specify a command to run after ripping disc. <a>Supported macros</a>.
+6=Specify a command to run after ripping disc. <a>Supported variables</a>.
 
 [DIALOG_30]
 0=Country code
@@ -239,6 +236,39 @@ Author=TJL
 5=&Label:
 6=Format:
 7=Start
+
+[DIALOG_35]
+0=Destination Templates
+3=&Add
+4=&Edit
+5=&Delete
+6=Move &Up
+7=&Move Down
+8=Note: the first item is the default template.
+
+[DIALOG_36]
+0=Destination
+3=Supported variables and <a>transforms</a>. Format: $(variable:transform), all names are case-insensitive.
+4=Replace underscores in $(DiscLabel) to spaces
+
+[DIALOG_37]
+0=DestDir
+51=...
+52=$(DestDir):
+
+[DIALOG_38]
+0=DiscTypeMap
+3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
+4=&DVD:
+5=&HD DVD:
+6=&BD:
+7=&UHD:
+
+[DIALOG_39]
+0=Replace or Save as
+3=The destination <a>%s</a> aready exists.
+4=Replace
+5=Save as
 
 [DIALOG_A]
 0=Ohjelmistopäivitys
@@ -307,7 +337,7 @@ Author=TJL
 39=%C:\[%S]
 40=&Tila
 41=&Open in Explorer
-42=&Metafile submission
+42=Submit &Metafile
 43=&Content Hash Verifier...
 44=Kopioi &kiintolevylle...
 45=Kopioi &levykuvaan...
@@ -350,7 +380,7 @@ Author=TJL
 82=MKB
 83=Main playlist
 84=BD+ created
-85=
+85=LayerBreak
 86=VID
 87=MK
 88=VUK
@@ -435,3 +465,20 @@ Author=TJL
 167=Please select or drag a ISO file here
 168=Please select or drag a folder here
 169=Ohje
+170=Name
+171=Value
+172=User variables (Right-click an item to edit the value)
+173=Disc variables
+174=My Discs variables
+175=Drive variables
+176=Save as...
+177=Edit Destination Templates...
+178=Copy '%s'
+179=Add disc that failed to open
+180=Add disc in virtual drives
+181=Add unprotected disc
+182=Add %s
+183=&Try Pro
+184=Päivitä Pro-versioon
+185=This feature is only available to users with a Xreveal Pro license. You can try Pro for free or buy a license to unlock Pro features.
+186=The decryption key was not found. You can try Pro for free or buy a license to unlock Pro features.
