--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -131,6 +131,7 @@ Author=Andex
 5=&Copier le dossier 'SSIF' lors de la copie d'un Blu-ray *3D* dans un dossier
 6=A&jouter l'état du lecteur au journal de copie
 7=A&fficher un avertissement lors de la création d'une image ISO protégée
+8=Enable the built-in ripper for &virtual drives
 
 [DIALOG_18]
 0=Enregistrement de la licence Pro
@@ -152,10 +153,6 @@ Author=Andex
 0=Catalogue
 
 [DIALOG_22]
-1=Oui
-2=Non
-3=Passer à Pro
-4=Pas de clé de déchiffrement trouvée dans 'keydb.cfg'!\nVoulez-vous la rechercher en ligne?
 
 [DIALOG_23]
 0=Informations sur le disque
@@ -239,6 +236,39 @@ Author=Andex
 5=&Etiquette:
 6=Format:
 7=Démarrer
+
+[DIALOG_35]
+0=Destination Templates
+3=&Add
+4=&Edit
+5=&Delete
+6=Move &Up
+7=&Move Down
+8=Note: the first item is the default template.
+
+[DIALOG_36]
+0=Destination
+3=Supported variables and <a>transforms</a>. Format: $(variable:transform), all names are case-insensitive.
+4=Replace underscores in $(DiscLabel) to spaces
+
+[DIALOG_37]
+0=DestDir
+51=...
+52=$(DestDir):
+
+[DIALOG_38]
+0=DiscTypeMap
+3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
+4=&DVD:
+5=&HD DVD:
+6=&BD:
+7=&UHD:
+
+[DIALOG_39]
+0=Replace or Save as
+3=The destination <a>%s</a> aready exists.
+4=Replace
+5=Save as
 
 [DIALOG_A]
 0=Mise à jour
@@ -350,7 +380,7 @@ Author=Andex
 82=MKB
 83=Liste de lecture principale
 84=Date BD+
-85=
+85=LayerBreak
 86=VID
 87=MK
 88=VUK
@@ -435,3 +465,20 @@ Author=Andex
 167=Sélectionner ou déposer un fichier ISO ici
 168=Sélectionner ou déposer un dossier ici
 169=Aide
+170=Name
+171=Value
+172=User variables (Right-click an item to edit the value)
+173=Disc variables
+174=My Discs variables
+175=Drive variables
+176=Save as...
+177=Edit Destination Templates...
+178=Copy '%s'
+179=Add disc that failed to open
+180=Add disc in virtual drives
+181=Add unprotected disc
+182=Add %s
+183=&Try Pro
+184=Passer à Pro
+185=This feature is only available to users with a Xreveal Pro license. You can try Pro for free or buy a license to unlock Pro features.
+186=The decryption key was not found. You can try Pro for free or buy a license to unlock Pro features.
