--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -127,10 +127,11 @@ Author= Lieba Natur Brilian (naturbrilian)
 [DIALOG_17]
 0=Ripper
 3=Read retry count:
-4=Abort when ignored errors exceed :
-5=Copy SSIF folder while ripping Blu-ray 3D to folder
-6=Append the drive status log to the rip log
+4=Abort when ignored errors exceed:
+5=Copy SSIF folder when ripping Blu-ray 3D to folder
+6=Append the drive info log to the rip log
 7=Show warning when creating a protected image
+8=Enable the built-in ripper for &virtual drives
 
 [DIALOG_18]
 0=Daftar Xreveal
@@ -152,10 +153,6 @@ Author= Lieba Natur Brilian (naturbrilian)
 0=Disk Saya
 
 [DIALOG_22]
-1=Ya
-2=Tidak
-3=Upgrade ke Pro
-4=Tidak ada key decryption yang ditemukan di keydb.cfg, Anda ingin untuk mengevaluasi fitur decryption awan?
 
 [DIALOG_23]
 0=Informasi Disc
@@ -184,7 +181,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 6=Suara kesalahan:
 
 [DIALOG_28]
-0=Metafile submission
+0=Submit Metafile
 1=&Submit
 3=Creating the disc metafile, please wait...
 4=Menambahkan %s...
@@ -198,9 +195,9 @@ Author= Lieba Natur Brilian (naturbrilian)
 [DIALOG_29]
 0=Actions
 3=Post-Scan action
-4=Specify a command to run after opening disc. <a>Supported macros</a>.
+4=Specify a command to run after opening disc. <a>Supported variables</a>.
 5=Post-Rip action
-6=Specify a command to run after ripping disc. <a>Supported macros</a>.
+6=Specify a command to run after ripping disc. <a>Supported variables</a>.
 
 [DIALOG_30]
 0=Country code
@@ -239,6 +236,39 @@ Author= Lieba Natur Brilian (naturbrilian)
 5=&Label:
 6=Format:
 7=Start
+
+[DIALOG_35]
+0=Destination Templates
+3=&Add
+4=&Edit
+5=&Delete
+6=Move &Up
+7=&Move Down
+8=Note: the first item is the default template.
+
+[DIALOG_36]
+0=Destination
+3=Supported variables and <a>transforms</a>. Format: $(variable:transform), all names are case-insensitive.
+4=Replace underscores in $(DiscLabel) to spaces
+
+[DIALOG_37]
+0=DestDir
+51=...
+52=$(DestDir):
+
+[DIALOG_38]
+0=DiscTypeMap
+3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
+4=&DVD:
+5=&HD DVD:
+6=&BD:
+7=&UHD:
+
+[DIALOG_39]
+0=Replace or Save as
+3=The destination <a>%s</a> aready exists.
+4=Replace
+5=Save as
 
 [DIALOG_A]
 0=Pembaruan Perangkat Lunak
@@ -350,7 +380,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 82=MKB
 83=Daftar Putar Utama
 84=Tanggal BDP
-85=
+85=LayerBreak
 86=VID
 87=MK
 88=VUK
@@ -435,3 +465,20 @@ Author= Lieba Natur Brilian (naturbrilian)
 167=Please select or drag a ISO file here
 168=Please select or drag a folder here
 169=Bantuan
+170=Name
+171=Value
+172=User variables (Right-click an item to edit the value)
+173=Disc variables
+174=My Discs variables
+175=Drive variables
+176=Save as...
+177=Edit Destination Templates...
+178=Copy '%s'
+179=Add disc that failed to open
+180=Add disc in virtual drives
+181=Add unprotected disc
+182=Add %s
+183=&Try Pro
+184=Upgrade ke Pro
+185=This feature is only available to users with a Xreveal Pro license. You can try Pro for free or buy a license to unlock Pro features.
+186=The decryption key was not found. You can try Pro for free or buy a license to unlock Pro features.
