--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -131,6 +131,7 @@ Author=bovirus (bovirus@gmail.com)
 5=Durante il rip del Blu-ray 3D nella cartella copia cartella SSIF
 6=Aggiungi contenuto registro stato unità al registro rip
 7=Visualizza avviso creazione immagine protetta
+8=Enable the built-in ripper for &virtual drives
 
 [DIALOG_18]
 0=Registra Xreveal
@@ -152,10 +153,6 @@ Author=bovirus (bovirus@gmail.com)
 0=Miei dischi
 
 [DIALOG_22]
-1=Sì
-2=No
-3=Passa a Pro
-4=Nel file keydb.cfg non è stata trovata la chiave del disco.\nVuoi provare la funzione Pro "Trova chiave online"?
 
 [DIALOG_23]
 0=Informazioni disco
@@ -239,6 +236,39 @@ Author=bovirus (bovirus@gmail.com)
 5=&Etichetta:
 6=Formato:
 7=Avvia
+
+[DIALOG_35]
+0=Destination Templates
+3=&Add
+4=&Edit
+5=&Delete
+6=Move &Up
+7=&Move Down
+8=Note: the first item is the default template.
+
+[DIALOG_36]
+0=Destination
+3=Supported variables and <a>transforms</a>. Format: $(variable:transform), all names are case-insensitive.
+4=Replace underscores in $(DiscLabel) to spaces
+
+[DIALOG_37]
+0=DestDir
+51=...
+52=$(DestDir):
+
+[DIALOG_38]
+0=DiscTypeMap
+3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
+4=&DVD:
+5=&HD DVD:
+6=&BD:
+7=&UHD:
+
+[DIALOG_39]
+0=Replace or Save as
+3=The destination <a>%s</a> aready exists.
+4=Replace
+5=Save as
 
 [DIALOG_A]
 0=Aggiornamento programma
@@ -350,7 +380,7 @@ Author=bovirus (bovirus@gmail.com)
 82=MKB
 83=Playlist principale
 84=Creato BDP
-85=
+85=LayerBreak
 86=VID
 87=MK
 88=VUK
@@ -435,3 +465,20 @@ Author=bovirus (bovirus@gmail.com)
 167=Seleziona o trascina qui un file ISO
 168=Seleziona o trascina qui una cartella
 169=&Aiuto
+170=Name
+171=Value
+172=User variables (Right-click an item to edit the value)
+173=Disc variables
+174=My Discs variables
+175=Drive variables
+176=Save as...
+177=Edit Destination Templates...
+178=Copy '%s'
+179=Add disc that failed to open
+180=Add disc in virtual drives
+181=Add unprotected disc
+182=Add %s
+183=&Try Pro
+184=Passa a Pro
+185=This feature is only available to users with a Xreveal Pro license. You can try Pro for free or buy a license to unlock Pro features.
+186=The decryption key was not found. You can try Pro for free or buy a license to unlock Pro features.
