--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -128,9 +128,10 @@ Author=Re*Index.(ot_inc)
 0=リッピング
 3=読み込みの再試行回数:
 4=無視されるエラーを超過時に中止するまでの回数:
-5=Copy SSIF folder while ripping Blu-ray 3D to folder
-6=Append the drive status log to the rip log
+5=Copy SSIF folder when ripping Blu-ray 3D to folder
+6=Append the drive info log to the rip log
 7=Show warning when creating a protected image
+8=Enable the built-in ripper for &virtual drives
 
 [DIALOG_18]
 0=登録
@@ -152,10 +153,6 @@ Author=Re*Index.(ot_inc)
 0=ディスク
 
 [DIALOG_22]
-1=はい
-2=いいえ
-3=プロにアップグレード
-4=keydb.cfg に復号化キーがありませんでした。クラウド復号化機能を使用しますか？
 
 [DIALOG_23]
 0=ディスクの情報
@@ -184,7 +181,7 @@ Author=Re*Index.(ot_inc)
 6=エラー時のサウンド:
 
 [DIALOG_28]
-0=Metafile submission
+0=Submit Metafile
 1=&Submit
 3=Creating the disc metafile, please wait...
 4=%s を追加中...
@@ -239,6 +236,39 @@ Author=Re*Index.(ot_inc)
 5=&Label:
 6=Format:
 7=Start
+
+[DIALOG_35]
+0=Destination Templates
+3=&Add
+4=&Edit
+5=&Delete
+6=Move &Up
+7=&Move Down
+8=Note: the first item is the default template.
+
+[DIALOG_36]
+0=Destination
+3=Supported variables and <a>transforms</a>. Format: $(variable:transform), all names are case-insensitive.
+4=Replace underscores in $(DiscLabel) to spaces
+
+[DIALOG_37]
+0=DestDir
+51=...
+52=$(DestDir):
+
+[DIALOG_38]
+0=DiscTypeMap
+3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
+4=&DVD:
+5=&HD DVD:
+6=&BD:
+7=&UHD:
+
+[DIALOG_39]
+0=Replace or Save as
+3=The destination <a>%s</a> aready exists.
+4=Replace
+5=Save as
 
 [DIALOG_A]
 0=ソフトウェアのアップデート
@@ -350,7 +380,7 @@ Author=Re*Index.(ot_inc)
 82=MKB
 83=メインプレイリスト
 84=BD+ の日付
-85=
+85=LayerBreak
 86=VID
 87=MK
 88=VUK
@@ -435,3 +465,20 @@ Author=Re*Index.(ot_inc)
 167=Please select or drag a ISO file here
 168=Please select or drag a folder here
 169=ヘルプを開く
+170=Name
+171=Value
+172=User variables (Right-click an item to edit the value)
+173=Disc variables
+174=My Discs variables
+175=Drive variables
+176=Save as...
+177=Edit Destination Templates...
+178=Copy '%s'
+179=Add disc that failed to open
+180=Add disc in virtual drives
+181=Add unprotected disc
+182=Add %s
+183=&Try Pro
+184=プロにアップグレード
+185=This feature is only available to users with a Xreveal Pro license. You can try Pro for free or buy a license to unlock Pro features.
+186=The decryption key was not found. You can try Pro for free or buy a license to unlock Pro features.
