--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -131,6 +131,7 @@ Author=비너스걸 (VenusGirl)
 5=블루레이 3D 추출 중 SSIF 폴더를 해당 폴더에 복사
 6=드라이브 상태 로그를 추출 로그에 추가
 7=보호된 이미지 생성 시 경고 표시
+8=Enable the built-in ripper for &virtual drives
 
 [DIALOG_18]
 0=등록
@@ -152,10 +153,6 @@ Author=비너스걸 (VenusGirl)
 0=내 디스크
 
 [DIALOG_22]
-1=예
-2=아니오
-3=프로로 업그레이드
-4=keydb.cfg에서 암호 해독 키를 찾을 수 없습니다. 클라우드 암호 해독 기능을 평가하시겠습니까?
 
 [DIALOG_23]
 0=디스크 정보
@@ -239,6 +236,39 @@ Author=비너스걸 (VenusGirl)
 5=레이블(&L):
 6=형식:
 7=시작
+
+[DIALOG_35]
+0=Destination Templates
+3=&Add
+4=&Edit
+5=&Delete
+6=Move &Up
+7=&Move Down
+8=Note: the first item is the default template.
+
+[DIALOG_36]
+0=Destination
+3=Supported variables and <a>transforms</a>. Format: $(variable:transform), all names are case-insensitive.
+4=Replace underscores in $(DiscLabel) to spaces
+
+[DIALOG_37]
+0=DestDir
+51=...
+52=$(DestDir):
+
+[DIALOG_38]
+0=DiscTypeMap
+3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
+4=&DVD:
+5=&HD DVD:
+6=&BD:
+7=&UHD:
+
+[DIALOG_39]
+0=Replace or Save as
+3=The destination <a>%s</a> aready exists.
+4=Replace
+5=Save as
 
 [DIALOG_A]
 0=소프트웨어 업데이트
@@ -350,7 +380,7 @@ Author=비너스걸 (VenusGirl)
 82=MKB
 83=기본 재생목록
 84=BDP 날짜
-85=
+85=LayerBreak
 86=VID
 87=MK
 88=VUK
@@ -435,3 +465,20 @@ Author=비너스걸 (VenusGirl)
 167=여기에 ISO 파일을 선택하거나 드래그하세요
 168=여기에 폴더를 선택하거나 드래그하세요
 169=도움말
+170=Name
+171=Value
+172=User variables (Right-click an item to edit the value)
+173=Disc variables
+174=My Discs variables
+175=Drive variables
+176=Save as...
+177=Edit Destination Templates...
+178=Copy '%s'
+179=Add disc that failed to open
+180=Add disc in virtual drives
+181=Add unprotected disc
+182=Add %s
+183=&Try Pro
+184=프로로 업그레이드
+185=This feature is only available to users with a Xreveal Pro license. You can try Pro for free or buy a license to unlock Pro features.
+186=The decryption key was not found. You can try Pro for free or buy a license to unlock Pro features.
