--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -131,6 +131,7 @@ Author=jekovcar
 5=Копировать папку SSIF при рипе Blu-ray 3D в папку
 6=Добавлять лог состояния диска в лог рипа
 7=Показать предупреждение при создании защищённого образа
+8=Enable the built-in ripper for &virtual drives
 
 [DIALOG_18]
 0=Регистрация Xreveal
@@ -152,10 +153,6 @@ Author=jekovcar
 0=Мои диски
 
 [DIALOG_22]
-1=Да
-2=Нет
-3=Перейти на Pro
-4=Ключи расшифровки в keydb.cfg не найдены. Хотите оценить функцию облачного дешифрирования?
 
 [DIALOG_23]
 0=Информация о диске
@@ -239,6 +236,39 @@ Author=jekovcar
 5=&Метка:
 6=Формат:
 7=Старт
+
+[DIALOG_35]
+0=Destination Templates
+3=&Add
+4=&Edit
+5=&Delete
+6=Move &Up
+7=&Move Down
+8=Note: the first item is the default template.
+
+[DIALOG_36]
+0=Destination
+3=Supported variables and <a>transforms</a>. Format: $(variable:transform), all names are case-insensitive.
+4=Replace underscores in $(DiscLabel) to spaces
+
+[DIALOG_37]
+0=DestDir
+51=...
+52=$(DestDir):
+
+[DIALOG_38]
+0=DiscTypeMap
+3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
+4=&DVD:
+5=&HD DVD:
+6=&BD:
+7=&UHD:
+
+[DIALOG_39]
+0=Replace or Save as
+3=The destination <a>%s</a> aready exists.
+4=Replace
+5=Save as
 
 [DIALOG_A]
 0=Обновление программы
@@ -350,7 +380,7 @@ Author=jekovcar
 82=MKB
 83=Основной плейлист
 84=BDP дата
-85=
+85=LayerBreak
 86=VID
 87=MK
 88=VUK
@@ -435,3 +465,20 @@ Author=jekovcar
 167=Пожалуйста, выберите или перетащите ISO-файл сюда
 168=Пожалуйста, выберите или перетащите папку сюда
 169=Помощь
+170=Name
+171=Value
+172=User variables (Right-click an item to edit the value)
+173=Disc variables
+174=My Discs variables
+175=Drive variables
+176=Save as...
+177=Edit Destination Templates...
+178=Copy '%s'
+179=Add disc that failed to open
+180=Add disc in virtual drives
+181=Add unprotected disc
+182=Add %s
+183=&Try Pro
+184=Перейти на Pro
+185=This feature is only available to users with a Xreveal Pro license. You can try Pro for free or buy a license to unlock Pro features.
+186=The decryption key was not found. You can try Pro for free or buy a license to unlock Pro features.
