--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -131,6 +131,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 5=Copiar carpeta SSIF al copiar Blu-ray 3D a carpeta
 6=Agregar el registro del estado de la unidad al registro de copiado
 7=Mostrar advertencia al crear una imagen protegida
+8=Enable the built-in ripper for &virtual drives
 
 [DIALOG_18]
 0=Registrar Xreveal
@@ -152,10 +153,6 @@ Author=Steven Rogers, Leandro Botella Penalva
 0=Mis Discos
 
 [DIALOG_22]
-1=Sí
-2=No
-3=Actualizar a Pro
-4=No se encontró la clave del disco en keydb.cfg. ¿Quieres buscarla en línea?
 
 [DIALOG_23]
 0=Información del Disco
@@ -239,6 +236,39 @@ Author=Steven Rogers, Leandro Botella Penalva
 5=&Etiqueta:
 6=Formato:
 7=Iniciar
+
+[DIALOG_35]
+0=Destination Templates
+3=&Add
+4=&Edit
+5=&Delete
+6=Move &Up
+7=&Move Down
+8=Note: the first item is the default template.
+
+[DIALOG_36]
+0=Destination
+3=Supported variables and <a>transforms</a>. Format: $(variable:transform), all names are case-insensitive.
+4=Replace underscores in $(DiscLabel) to spaces
+
+[DIALOG_37]
+0=DestDir
+51=...
+52=$(DestDir):
+
+[DIALOG_38]
+0=DiscTypeMap
+3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
+4=&DVD:
+5=&HD DVD:
+6=&BD:
+7=&UHD:
+
+[DIALOG_39]
+0=Replace or Save as
+3=The destination <a>%s</a> aready exists.
+4=Replace
+5=Save as
 
 [DIALOG_A]
 0=Actualización de Software
@@ -350,7 +380,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 82=MKB
 83=Lista de reproducción principal
 84=BD+ creado
-85=
+85=LayerBreak
 86=VID
 87=MK
 88=VUK
@@ -435,3 +465,20 @@ Author=Steven Rogers, Leandro Botella Penalva
 167=Por favor, selecciona o arrastra un archivo ISO aquí
 168=Por favor, selecciona o arrastra una carpeta aquí
 169=Ayuda
+170=Name
+171=Value
+172=User variables (Right-click an item to edit the value)
+173=Disc variables
+174=My Discs variables
+175=Drive variables
+176=Save as...
+177=Edit Destination Templates...
+178=Copy '%s'
+179=Add disc that failed to open
+180=Add disc in virtual drives
+181=Add unprotected disc
+182=Add %s
+183=&Try Pro
+184=Actualizar a Pro
+185=This feature is only available to users with a Xreveal Pro license. You can try Pro for free or buy a license to unlock Pro features.
+186=The decryption key was not found. You can try Pro for free or buy a license to unlock Pro features.
