--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -131,6 +131,7 @@ Author=Harry Samwel, Sopor
 5=Kopiera SSIF mapp under rippning av blu-ray 3D till mapp
 6=Lägg till enhetsstatus i loggen
 7=Visa varning när skyddad avbild skapas
+8=Enable the built-in ripper for &virtual drives
 
 [DIALOG_18]
 0=Registrering
@@ -152,10 +153,6 @@ Author=Harry Samwel, Sopor
 0=Mina Skivor
 
 [DIALOG_22]
-1=Ja
-2=Nej
-3=Uppgradera till Pro
-4=Nyckeln till skivan hittades inte i keydb.cfg. Vill du söka på nätet?
 
 [DIALOG_23]
 0=Skivinformation
@@ -239,6 +236,39 @@ Author=Harry Samwel, Sopor
 5=Titel:
 6=Format:
 7=Start
+
+[DIALOG_35]
+0=Destination Templates
+3=&Add
+4=&Edit
+5=&Delete
+6=Move &Up
+7=&Move Down
+8=Note: the first item is the default template.
+
+[DIALOG_36]
+0=Destination
+3=Supported variables and <a>transforms</a>. Format: $(variable:transform), all names are case-insensitive.
+4=Replace underscores in $(DiscLabel) to spaces
+
+[DIALOG_37]
+0=DestDir
+51=...
+52=$(DestDir):
+
+[DIALOG_38]
+0=DiscTypeMap
+3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
+4=&DVD:
+5=&HD DVD:
+6=&BD:
+7=&UHD:
+
+[DIALOG_39]
+0=Replace or Save as
+3=The destination <a>%s</a> aready exists.
+4=Replace
+5=Save as
 
 [DIALOG_A]
 0=Programuppdatering
@@ -350,7 +380,7 @@ Author=Harry Samwel, Sopor
 82=MKB
 83=Huvudspellista
 84=BD+ skapad
-85=
+85=LayerBreak
 86=VID
 87=MK
 88=VUK
@@ -435,5 +465,20 @@ Author=Harry Samwel, Sopor
 167=Välj eller dra en ISO fil hit
 168=Välj eller dra en mapp hit
 169=Hjälp
-
-
+170=Name
+171=Value
+172=User variables (Right-click an item to edit the value)
+173=Disc variables
+174=My Discs variables
+175=Drive variables
+176=Save as...
+177=Edit Destination Templates...
+178=Copy '%s'
+179=Add disc that failed to open
+180=Add disc in virtual drives
+181=Add unprotected disc
+182=Add %s
+183=&Try Pro
+184=Uppgradera till Pro
+185=This feature is only available to users with a Xreveal Pro license. You can try Pro for free or buy a license to unlock Pro features.
+186=The decryption key was not found. You can try Pro for free or buy a license to unlock Pro features.
