--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0410
 Name=Italian (Italiano)
-Version=2.8.9
+Version=2.9.0
 Author=bovirus (bovirus@gmail.com)
 1=OK
 2=Annulla
@@ -94,9 +94,9 @@ Author=bovirus (bovirus@gmail.com)
 
 [DIALOG_14]
 1=Avvia
-3=Sorgente
-4=Destinazione
-5=Opzioni
+3=&Sorgente
+4=&Destinazione
+5=&Opzioni
 6=Informazioni
 7=Tipo:
 8=Dimensione:
@@ -104,13 +104,13 @@ Author=bovirus (bovirus@gmail.com)
 10=Spazio libero:
 11=Capacità:
 12=&Mantieni protezione
-13=Verifica &hash contenuto
-14=Crea file checksum &MD5
-15=Crea &dvdid.xml
-16=Crea file registro eventi
+13=&Verifica Hash contenuto
+14=Crea file &checksum MD5
+15=Crea dvdid.&xml
+16=Crea file &log
 17=Crea disc.&metaiso
 18=Copia solo cartella &VIDEO_TS
-19=Verifica byte sincronizzazione &M2TS
+19=Verifica &bytes sincronizzazione M2TS
 
 [DIALOG_15]
 0=Xreveal
@@ -131,7 +131,7 @@ Author=bovirus (bovirus@gmail.com)
 5=Durante il rip del Blu-ray 3D nella cartella copia cartella SSIF
 6=Aggiungi contenuto registro stato unità al registro rip
 7=Visualizza avviso creazione immagine protetta
-8=Enable the built-in ripper for &virtual drives
+8=Abilita il ripper pre-incluso per unità &virtuali
 
 [DIALOG_18]
 0=Registra Xreveal
@@ -181,7 +181,7 @@ Author=bovirus (bovirus@gmail.com)
 6=Suono per errore durante ripping:
 
 [DIALOG_28]
-0=Invio metafile
+0=Invia metafile
 1=&Invia
 3=Creazione metafile del disco, attendi...
 4=Aggiunta di %s...
@@ -195,9 +195,9 @@ Author=bovirus (bovirus@gmail.com)
 [DIALOG_29]
 0=Azioni
 3=Azione post scansione
-4=Specifica un comando da eseguire dopo l'apertura del disco. <a>Macro supportate</a>.
+4=Specifica un comando da eseguire dopo l'apertura del disco. <a>Variabili supportate</a>.
 5=Azione post ripping
-6=Specifica un comando da eseguire dopo il ripping del disco. <a>Macro supportate</a>.
+6=Specifica un comando da eseguire dopo il ripping del disco. <a>Variabili supportate</a>.
 
 [DIALOG_30]
 0=Codice regionale
@@ -238,37 +238,37 @@ Author=bovirus (bovirus@gmail.com)
 7=Avvia
 
 [DIALOG_35]
-0=Destination Templates
-3=&Add
-4=&Edit
-5=&Delete
-6=Move &Up
-7=&Move Down
-8=Note: the first item is the default template.
+0=Modelli destinazione
+3=&Aggiungi
+4=&Modifica
+5=&Elimina
+6=Sposta &su
+7=&Sposta giù
+8=Nota: il primo elemento è il modello predefinito.
 
 [DIALOG_36]
-0=Destination
-3=Supported variables and <a>transforms</a>. Format: $(variable:transform), all names are case-insensitive.
-4=Replace underscores in $(DiscLabel) to spaces
+0=Destinazione
+3=Variabili supportate e <a>transforms</a>. Formato: $(variable:transform), tutti i nomi ignorano maiuscole/minuscole.
+4=Sostituisci sottolineature in $(DiscLabel) con spazi
 
 [DIALOG_37]
-0=DestDir
+0=Cartella destinazione
 51=...
 52=$(DestDir):
 
 [DIALOG_38]
-0=DiscTypeMap
-3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
+0=Mappa tipo disco
+3=Specifica un valore di mappa corrispondente al tipo del disco. <a>Supported variables</a>.
 4=&DVD:
 5=&HD DVD:
 6=&BD:
 7=&UHD:
 
 [DIALOG_39]
-0=Replace or Save as
-3=The destination <a>%s</a> aready exists.
-4=Replace
-5=Save as
+0=Sotituisci o Salca con nome
+3=La destinazione <a>%s</a> è già esistente.
+4=Sostituisci
+5=Salva con nome
 
 [DIALOG_A]
 0=Aggiornamento programma
@@ -316,12 +316,12 @@ Author=bovirus (bovirus@gmail.com)
 18=Xreveal non funzionerà se '%s' è in esecuzione.\n\nVuoi chiudere '%s'?
 19=Xreveal sta eseguendo la scansione dell'unità %C:
 20=Il disco inserito sarà disponibile a breve, attendi!
-21=Xreveal non è attivo per l'unità %C:!\n\nPer poter eseguire il ripping di un disco protetto da copia, Xreveal deve essere attivo per l'unità.
+21=L'unità %C: non è nella modalità di decrittazione on-the-fly!\n\nPer maggiori informazioni, fare riferimento alla finestra Informazioni nelle impostazioni.
 22=La cartella '%s' non dispone di sufficiente spazio!\nÈ necessario spazio aggiuntivo %s.
 23=Copia di %s...
 24=%.1f MB/s
 25=Operazione completata!
-26=Chiave del disco non trovata in {%s}
+26=Chiave dei decrittazione non trovata {%s}
 27=Sito &web programma
 28=Xreveal non è riuscito ad aprire il disco, codice errore: %s.
 29=Unità
@@ -337,7 +337,7 @@ Author=bovirus (bovirus@gmail.com)
 39=%C:\[%S]
 40=&Stato
 41=&Apri in Explorer
-42=&Invio file meta
+42=&Invia metafile
 43=&Verifica hash contenuto...
 44=Crea immagine nella &cartella...
 45=Crea file i&mmagine ISO...
@@ -352,7 +352,7 @@ Author=bovirus (bovirus@gmail.com)
 54=&Chiudi vassoio unità
 55=&Proprietà
 56=Nessuno
-57=Stai usando la versione gratuita, per sbloccare funzionalità aggiuntive <a>aggiorna alla versione Pro</a>.
+57=Stai usando la versione gratuita, per sbloccare funzionalità Pro <a>aggiorna alla versione Pro</a>.
 58=Il file '%s' esiste già.\nVuoi sostituire il file esistente?
 59=Vuoi annullare l'operazione?
 60=La licenza è scaduta il %s.
@@ -465,20 +465,20 @@ Author=bovirus (bovirus@gmail.com)
 167=Seleziona o trascina qui un file ISO
 168=Seleziona o trascina qui una cartella
 169=&Aiuto
-170=Name
-171=Value
-172=User variables (Right-click an item to edit the value)
-173=Disc variables
-174=My Discs variables
-175=Drive variables
-176=Save as...
-177=Edit Destination Templates...
-178=Copy '%s'
-179=Add disc that failed to open
-180=Add disc in virtual drives
-181=Add unprotected disc
-182=Add %s
-183=&Try Pro
+170=Nome
+171=Valore
+172=Variabili utente (clic destro su un elemento per modificare il valore)
+173=Variabili disco
+174=Le mie variabili disco
+175=Variabili disco
+176=Salva con nome...
+177=Modifica modelli destinazione...
+178=Copia '%s'
+179=Aggiungi disco la cui apertura è fallita
+180=Aggiungi disco a unità virtuali
+181=Aggiungi disco non protetto
+182=Aggiungi %s
+183=&Prova Pro
 184=Passa a Pro
-185=This feature is only available to users with a Xreveal Pro license. You can try Pro for free or buy a license to unlock Pro features.
-186=The decryption key was not found. You can try Pro for free or buy a license to unlock Pro features.
+185=Questa caratteristica è disponibile solo per utenti con una licenza Xreveal Pro. Puoi provare Pro gratuitamente o acquistare una licenza per sbloccare caratteristiche Pro.
+186=La chiave di decrittazione non è stata trovata. Puoi provare Pro gratuitamente o acquistare una licenza per sbloccare caratteristiche Pro.
